LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/GT_Client_Competitors__c.object-meta.xml
<CustomObject>
    <label>Compete Firm</label>
    <nameField>
        <label>Compete Firm</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compete Firms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>