LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan</label>
    <referenceTo>Account_Plan__c</referenceTo>
    <relationshipLabel>Compete Landscape</relationshipLabel>
    <relationshipName>GT_Client_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>