LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Client_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Entity_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>GT_Client_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>