LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Compete_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Compete_Partner_Name__c</fullName>
    <label>Compete Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>