LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Estimated_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Fee__c</fullName>
    <label>Estimated Fee</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>