LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Expertise</label>
    <referenceTo>ExpertisePL__c</referenceTo>
    <relationshipName>GT_Client_Competitors</relationshipName>
    <type>Lookup</type>
</CustomField>