LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Expertise_Text__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Text__c</fullName>
    <label>Expertise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>