LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <label>Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>