LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Share_of_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet__c</fullName>
    <label>Share of Wallet (%) in Offering</label>
    <length>255</length>
    <type>Text</type>
</CustomField>