LinKreta_POC_Repository/force-app/main/default/objects/GT_Client_Competitors__c/fields/Share_of_Wallet_Per__c.field-meta.xml
<CustomField>
    <fullName>Share_of_Wallet_Per__c</fullName>
    <label>Share of Wallet (%)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>